objects/modigie__ModigieTriggerOverride__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>modigie__ContactTriggerOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContactTriggerOverride</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__LeadTriggerOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LeadTriggerOverride</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__OverrideAll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OverrideAll</label>
        <type>Checkbox</type>
    </fields>
    <label>ModigieTriggerOverride</label>
</CustomObject>